fix(web-app) remove vertical-align

--- a/projects/web-app/src/style/typography.css
+++ b/projects/web-app/src/style/typography.css
@@ -42,5 +42,4 @@ h6, .h6 {
 
 code {
   font-size: 1.1em;
-  vertical-align: bottom;
 }
